--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "Uloženka APIv3 library",
     "keywords": ["ulozenka", "api", "restapi","transport"],
     "homepage": "https://www.ulozenka.cz/",
-    "license": ["lgpl-3.0"],
+    "license": ["LGPL-3.0"],
     "authors": [
         {
             "name": "Ulozenka",
