--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,10 @@ php:
   - 5.4
   - 5.5
   - 5.6
+  - 7.0
 
 before_script:
   - composer self-update
   - composer install --no-interaction --prefer-source
 
-script: ./tests/runTests.sh
+script: ./vendor/bin/tester ./tests
